fixing nav bar display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav {
 	
 }
 
-@media (min-width: 769px) {
+@media (max-width: 769px) {
 	nav {
         display: flex;
         flex-wrap: wrap;
